FIXED:mapping API functions with hard-coded json posting content